Move action print layout related parameters to db
Allows changing the layout heuristics per plan and without deploying

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,7 @@ filterwarnings = [
     "ignore::DeprecationWarning:easy_thumbnails",
 ]
 testpaths = [
-    "*/tests"
+    "**/tests"
 ]
 
 [tool.mypy]
