--- a/requirements.txt
+++ b/requirements.txt
@@ -58,7 +58,9 @@ coreapi==2.3.3
 coreschema==0.0.4
     # via coreapi
 coverage[toml]==6.5.0
-    # via pytest-cov
+    # via
+    #   coverage
+    #   pytest-cov
 cryptography==38.0.3
     # via
     #   -r requirements.in
@@ -100,6 +102,7 @@ django==4.2.11
     #   drf-spectacular
     #   easy-thumbnails
     #   graphene-django
+    #   laces
     #   wagtail
     #   wagtail-localize
 django-anymail[mailgun,mailjet,sendgrid]==10.3
@@ -146,7 +149,7 @@ django-reversion==5.0.4
     # via -r requirements.in
 django-storages==1.13.2
     # via -r requirements.in
-django-taggit==3.0.0
+django-taggit==5.0.1
     # via wagtail
 django-treebeard==4.5.1
     # via wagtail
@@ -228,6 +231,8 @@ jwcrypto==1.5.3
 kombu==5.2.4
     # via celery
 l18n==2021.3
+    # via wagtail
+laces==0.1.1
     # via wagtail
 libvoikko==4.3
     # via -r requirements.in
@@ -372,8 +377,10 @@ soupsieve==2.3.2.post1
 sqlparse==0.4.3
     # via django
 tablib[html,ods,xls,xlsx,yaml]==3.2.1
-    # via django-import-export
-telepath==0.3
+    # via
+    #   django-import-export
+    #   tablib
+telepath==0.3.1
     # via wagtail
 tenacity==8.1.0
     # via plotly
@@ -407,7 +414,7 @@ vine==5.0.0
     #   amqp
     #   celery
     #   kombu
-wagtail==5.2
+wagtail==6.0.1
     # via
     #   -r requirements.in
     #   wagtail-autocomplete
@@ -421,13 +428,13 @@ wagtail-autocomplete==0.9.0
     # via -r requirements.in
 wagtail-generic-chooser==0.5.1
     # via -r requirements.in
-wagtail-grapple==0.23.0
+wagtail-grapple==0.24.0
     # via -r requirements.in
 wagtail-headless-preview==0.4.0
     # via wagtail-grapple
 wagtail-localize==1.8.2
     # via -r requirements.in
-wagtail-modeladmin==1.0.0
+wagtail-modeladmin==2.0.0
     # via -r requirements.in
 wagtail-orderable==1.1.0
     # via -r requirements.in
@@ -440,7 +447,9 @@ webencodings==0.5.1
     #   html5lib
     #   tinycss2
 willow[heif]==1.6.2
-    # via wagtail
+    # via
+    #   wagtail
+    #   willow
 wrapt==1.14.1
     # via deprecated
 xlrd==2.0.1
