--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,19 +4,17 @@
 #
 #    pip-compile requirements-dev.in
 #
-anyio==4.0.0
+anyio==4.3.0
     # via watchfiles
-asttokens==2.4.0
+asttokens==2.4.1
     # via stack-data
-attrs==22.1.0
+attrs==23.2.0
     # via
     #   -c requirements.txt
     #   wmctrl
-backcall==0.2.0
-    # via ipython
-build==1.0.3
+build==1.2.1
     # via pip-tools
-click==8.1.3
+click==8.1.7
     # via
     #   -c requirements.txt
     #   pip-tools
@@ -24,18 +22,18 @@ decorator==5.1.1
     # via
     #   ipdb
     #   ipython
-executing==2.0.0
+executing==2.0.1
     # via stack-data
 fancycompleter==0.9.1
     # via pdbpp
-idna==3.4
+idna==3.6
     # via
     #   -c requirements-lint.txt
     #   -c requirements.txt
     #   anyio
 ipdb==0.13.13
     # via -r requirements-dev.in
-ipython==8.16.1
+ipython==8.23.0
     # via
     #   -r requirements-dev.in
     #   ipdb
@@ -43,21 +41,19 @@ jedi==0.19.1
     # via ipython
 matplotlib-inline==0.1.6
     # via ipython
-packaging==21.3
+packaging==24.0
     # via
     #   -c requirements.txt
     #   build
-parso==0.8.3
+parso==0.8.4
     # via jedi
 pdbpp==0.10.3
     # via -r requirements-dev.in
-pexpect==4.8.0
+pexpect==4.9.0
     # via ipython
-pickleshare==0.7.5
-    # via ipython
-pip-tools==7.3.0
+pip-tools==7.4.1
     # via -r requirements-dev.in
-prompt-toolkit==3.0.32
+prompt-toolkit==3.0.43
     # via
     #   -c requirements.txt
     #   ipython
@@ -65,38 +61,41 @@ ptyprocess==0.7.0
     # via pexpect
 pure-eval==0.2.2
     # via stack-data
-pygments==2.13.0
+pygments==2.17.2
     # via
     #   -c requirements.txt
     #   ipython
     #   pdbpp
-pyparsing==3.0.9
-    # via
-    #   -c requirements.txt
-    #   packaging
 pyproject-hooks==1.0.0
-    # via build
+    # via
+    #   build
+    #   pip-tools
 pyrepl==0.9.0
     # via fancycompleter
 six==1.16.0
     # via
     #   -c requirements.txt
     #   asttokens
-sniffio==1.3.0
+sniffio==1.3.1
     # via anyio
 stack-data==0.6.3
     # via ipython
-traitlets==5.11.2
+traitlets==5.14.2
     # via
     #   ipython
     #   matplotlib-inline
-watchfiles==0.20.0
+typing-extensions==4.11.0
+    # via
+    #   -c requirements-lint.txt
+    #   -c requirements.txt
+    #   ipython
+watchfiles==0.21.0
     # via -r requirements-dev.in
-wcwidth==0.2.5
+wcwidth==0.2.13
     # via
     #   -c requirements.txt
     #   prompt-toolkit
-wheel==0.41.2
+wheel==0.43.0
     # via pip-tools
 wmctrl==0.5
     # via pdbpp
