--- a/requirements-lint.txt
+++ b/requirements-lint.txt
@@ -10,15 +10,15 @@ asgiref==3.8.1
     #   django
 celery-stubs==0.1.3
     # via -r requirements-lint.in
-certifi==2022.9.24
+certifi==2024.2.2
     # via
     #   -c requirements.txt
     #   requests
-charset-normalizer==2.1.1
+charset-normalizer==3.3.2
     # via
     #   -c requirements.txt
     #   requests
-django==4.2.11
+django==5.0.4
     # via
     #   -c requirements.txt
     #   django-stubs
@@ -33,34 +33,34 @@ djangorestframework-stubs==3.14.5
     # via -r requirements-lint.in
 graphene-stubs==0.16
     # via -r requirements-lint.in
-idna==3.4
+idna==3.6
     # via
     #   -c requirements.txt
     #   requests
-isort==5.12.0
+isort==5.13.2
     # via -r requirements-lint.in
-mypy==1.8.0
+mypy==1.9.0
     # via
     #   -r requirements-lint.in
     #   celery-stubs
     #   graphene-stubs
 mypy-extensions==1.0.0
     # via mypy
-requests==2.28.1
+requests==2.31.0
     # via
     #   -c requirements.txt
     #   djangorestframework-stubs
-ruff==0.0.292
+ruff==0.3.5
     # via -r requirements-lint.in
-sqlparse==0.4.3
+sqlparse==0.4.4
     # via
     #   -c requirements.txt
     #   django
-types-python-dateutil==2.8.19.14
+types-python-dateutil==2.9.0.20240316
     # via -r requirements-lint.in
-types-pytz==2023.3.1.1
+types-pytz==2024.1.0.20240203
     # via django-stubs
-types-pyyaml==6.0.12.12
+types-pyyaml==6.0.12.20240311
     # via
     #   django-stubs
     #   djangorestframework-stubs
@@ -68,7 +68,7 @@ types-requests==2.31.0.6
     # via djangorestframework-stubs
 types-urllib3==1.26.25.14
     # via types-requests
-typing-extensions==4.7.1
+typing-extensions==4.11.0
     # via
     #   -c requirements.txt
     #   celery-stubs
@@ -77,7 +77,7 @@ typing-extensions==4.7.1
     #   djangorestframework-stubs
     #   graphene-stubs
     #   mypy
-urllib3==1.26.15
+urllib3==1.26.18
     # via
     #   -c requirements.txt
     #   requests
