--- a/requirements.txt
+++ b/requirements.txt
@@ -4,85 +4,83 @@
 #
 #    pip-compile
 #
-amqp==5.1.1
+amqp==5.2.0
     # via kombu
 aniso8601==9.0.1
     # via
     #   -r requirements.in
     #   graphene
-anyascii==0.3.1
+anyascii==0.3.2
     # via wagtail
 asgiref==3.8.1
-    # via django
-async-timeout==4.0.2
-    # via redis
-attrs==22.1.0
+    # via
+    #   django
+    #   django-cors-headers
+    #   django-countries
+attrs==23.2.0
     # via
     #   jsonschema
-    #   pytest
-babel==2.12.1
+    #   referencing
+babel==2.14.0
     # via -r requirements.in
-beautifulsoup4==4.11.1
+beautifulsoup4==4.12.3
     # via wagtail
-billiard==3.6.4.0
+billiard==4.2.0
     # via celery
-celery==5.2.7
+celery==5.3.6
     # via -r requirements.in
-certifi==2022.9.24
+certifi==2024.2.2
     # via
     #   elasticsearch
     #   requests
     #   sentry-sdk
-cffi==1.15.1
+cffi==1.16.0
     # via
     #   cryptography
     #   milksnake
-charset-normalizer==2.1.1
+charset-normalizer==3.3.2
     # via requests
-click==8.1.3
+click==8.1.7
     # via
     #   celery
     #   click-didyoumean
     #   click-plugins
     #   click-repl
-click-didyoumean==0.3.0
+click-didyoumean==0.3.1
     # via celery
 click-plugins==1.1.1
     # via celery
-click-repl==0.2.0
+click-repl==0.3.0
     # via celery
-commonmark==0.9.1
-    # via rich
 coreapi==2.3.3
     # via -r requirements.in
 coreschema==0.0.4
     # via coreapi
-coverage[toml]==6.5.0
+coverage[toml]==7.4.4
     # via
     #   coverage
     #   pytest-cov
-cryptography==38.0.3
+cryptography==42.0.5
     # via
     #   -r requirements.in
     #   jwcrypto
     #   social-auth-core
 dal-admin-filters==1.1.0
     # via -r requirements.in
-defusedxml==0.7.1
+defusedxml==0.8.0rc2
     # via
     #   odfpy
     #   python3-openid
     #   social-auth-core
     #   willow
-deprecated==1.2.13
-    # via redis
-diff-match-patch==20200713
+diff-match-patch==20230430
     # via django-import-export
-django==4.2.11
+django==5.0.4
     # via
     #   -r requirements.in
     #   django-anymail
     #   django-appconf
+    #   django-autocomplete-light
     #   django-cors-headers
     #   django-extensions
     #   django-filter
@@ -103,25 +101,26 @@ django==4.2.11
     #   easy-thumbnails
     #   graphene-django
     #   laces
+    #   social-auth-app-django
     #   wagtail
     #   wagtail-localize
 django-anymail[mailgun,mailjet,sendgrid]==10.3
     # via -r requirements.in
-django-appconf==1.0.5
+django-appconf==1.0.6
     # via django-image-cropping
-django-autocomplete-light==3.9.4
+django-autocomplete-light==3.11.0
     # via
     #   -r requirements.in
     #   dal-admin-filters
-django-autoslug==1.9.8
+django-autoslug==1.9.9
     # via -r requirements.in
-django-cors-headers==3.13.0
+django-cors-headers==4.3.1
     # via -r requirements.in
-django-countries==7.5
+django-countries==7.6.1
     # via -r requirements.in
-django-environ==0.9.0
+django-environ==0.11.2
     # via -r requirements.in
-django-extensions==3.2.1
+django-extensions==3.2.3
     # via -r requirements.in
 django-filter==23.5
     # via
@@ -129,7 +128,7 @@ django-filter==23.5
     #   wagtail
 django-image-cropping==1.7
     # via -r requirements.in
-django-import-export==3.0.1
+django-import-export==3.3.7
     # via -r requirements.in
 django-modelcluster==6.3
     # via wagtail
@@ -143,51 +142,51 @@ django-parler==2.3
     # via -r requirements.in
 django-permissionedforms==0.1
     # via wagtail
-django-redis==5.2.0
+django-redis==5.4.0
     # via -r requirements.in
-django-reversion==5.0.4
+django-reversion==5.0.12
     # via -r requirements.in
-django-storages==1.13.2
+django-storages==1.14.2
     # via -r requirements.in
 django-taggit==5.0.1
     # via wagtail
-django-treebeard==4.5.1
+django-treebeard==4.7.1
     # via wagtail
-djangorestframework==3.14.0
+djangorestframework==3.15.1
     # via
     #   -r requirements.in
     #   drf-nested-routers
     #   drf-spectacular
     #   wagtail
-draftjs-exporter==2.1.7
+draftjs-exporter==5.0.0
     # via wagtail
-drf-nested-routers==0.93.4
+drf-nested-routers==0.93.5
     # via -r requirements.in
-drf-spectacular==0.24.2
+drf-spectacular==0.27.2
     # via -r requirements.in
-easy-thumbnails==2.8.3
+easy-thumbnails==2.8.5
     # via -r requirements.in
 ecdsa==0.18.0
     # via python-jose
-elasticsearch==7.17.7
+elasticsearch==7.17.9
     # via
     #   -r requirements.in
     #   elasticsearch-dsl
-elasticsearch-dsl==7.4.0
+elasticsearch-dsl==7.4.1
     # via -r requirements.in
 et-xmlfile==1.1.0
     # via openpyxl
-factory-boy==3.2.1
+factory-boy==3.3.0
     # via
     #   -r requirements.in
     #   pytest-factoryboy
-faker==15.3.1
+faker==24.7.1
     # via factory-boy
 filetype==1.2.0
     # via willow
-graphene==3.1.1
+graphene==3.3
     # via graphene-django
-graphene-django==3.0.2
+graphene-django==3.2.0
     # via
     #   -r requirements.in
     #   wagtail-grapple
@@ -208,27 +207,29 @@ html2text==2024.2.26
     # via -r requirements.in
 html5lib==1.1
     # via wagtail
-humanize==4.4.0
+humanize==4.9.0
     # via -r requirements.in
-idna==3.4
+idna==3.6
     # via requests
 inflection==0.5.1
     # via
     #   drf-spectacular
     #   pytest-factoryboy
-iniconfig==1.1.1
+iniconfig==2.0.0
     # via pytest
 itypes==1.2.0
     # via coreapi
-jinja2==3.1.2
+jinja2==3.1.3
     # via
     #   -r requirements.in
     #   coreschema
-jsonschema==4.17.0
+jsonschema==4.21.1
     # via drf-spectacular
-jwcrypto==1.5.3
+jsonschema-specifications==2023.12.1
+    # via jsonschema
+jwcrypto==1.5.6
     # via django-oauth-toolkit
-kombu==5.2.4
+kombu==5.3.6
     # via celery
 l18n==2021.3
     # via wagtail
@@ -238,17 +239,21 @@ libvoikko==4.3
     # via -r requirements.in
 loguru==0.7.2
     # via -r requirements.in
-lxml==4.9.2
+lxml==5.2.1
     # via -r requirements.in
-markdown==3.4.1
+markdown==3.6
     # via -r requirements.in
+markdown-it-py==3.0.0
+    # via rich
 markuppy==1.14
     # via tablib
-markupsafe==2.1.1
+markupsafe==2.1.5
     # via jinja2
-milksnake==0.1.5
+mdurl==0.1.2
+    # via markdown-it-py
+milksnake==0.1.6
     # via rustface
-networkx==3.2.1
+networkx==3.3
     # via -r requirements.in
 oauthlib==3.2.2
     # via
@@ -257,89 +262,89 @@ oauthlib==3.2.2
     #   social-auth-core
 odfpy==1.4.1
     # via tablib
-openpyxl==3.0.10
+openpyxl==3.1.2
     # via
     #   tablib
     #   wagtail
-packaging==21.3
+packaging==24.0
     # via
+    #   plotly
     #   pytest
-    #   redis
-pillow==9.3.0
+    #   pytest-factoryboy
+pillow==10.3.0
     # via
     #   -r requirements.in
     #   easy-thumbnails
     #   pillow-heif
     #   wagtail
-pillow-heif==0.13.0
+pillow-heif==0.16.0
     # via willow
-plotly==5.11.0
+plotly==5.20.0
     # via -r requirements.in
-pluggy==1.0.0
+pluggy==1.4.0
     # via pytest
-polars[xlsx2csv]==0.18.3
+polars[xlsx2csv]==0.20.18
     # via -r requirements.in
-polib==1.1.1
+polib==1.2.0
     # via wagtail-localize
 promise==2.3
     # via graphene-django
-prompt-toolkit==3.0.32
+prompt-toolkit==3.0.43
     # via click-repl
-psycopg2-binary==2.9.5
+psycopg2-binary==2.9.9
     # via -r requirements.in
-pyasn1==0.4.8
+pyasn1==0.6.0
     # via
     #   python-jose
     #   rsa
-pycparser==2.21
+pycparser==2.22
     # via cffi
 pycryptodome==3.19.0
     # via -r requirements.in
-pygments==2.13.0
+pygments==2.17.2
     # via
     #   pygments-graphql
     #   rich
 pygments-graphql==1.0.0
     # via -r requirements.in
-pyjwt==2.6.0
+pyjwt==2.8.0
     # via social-auth-core
-pyparsing==3.0.9
-    # via packaging
-pyrsistent==0.19.2
-    # via jsonschema
-pytest==7.2.0
+pytest==8.1.1
     # via
     #   pytest-cov
     #   pytest-django
     #   pytest-factoryboy
-pytest-cov==4.0.0
+pytest-cov==5.0.0
     # via -r requirements.in
-pytest-django==4.5.2
+pytest-django==4.8.0
     # via -r requirements.in
-pytest-factoryboy==2.5.0
+pytest-factoryboy==2.7.0
     # via -r requirements.in
-python-dateutil==2.8.2
+python-dateutil==2.9.0.post0
     # via
+    #   celery
     #   elasticsearch-dsl
     #   faker
 python-jose==3.3.0
     # via -r requirements.in
 python3-openid==3.2.0
     # via social-auth-core
-pytz==2022.6
+pytz==2024.1
     # via
-    #   celery
     #   django-modelcluster
-    #   djangorestframework
     #   l18n
-pyyaml==6.0
+pyyaml==6.0.1
     # via
     #   -r requirements.in
     #   drf-spectacular
     #   tablib
-redis==4.3.4
+redis==5.0.3
     # via django-redis
-requests==2.28.1
+referencing==0.34.0
+    # via
+    #   jsonschema
+    #   jsonschema-specifications
+requests==2.31.0
     # via
     #   coreapi
     #   django-anymail
@@ -348,73 +353,77 @@ requests==2.28.1
     #   social-auth-core
     #   wagtail
     #   wagtail-generic-chooser
-requests-oauthlib==1.3.1
+requests-oauthlib==2.0.0
     # via social-auth-core
-rich==12.6.0
+rich==13.7.1
     # via -r requirements.in
+rpds-py==0.18.0
+    # via
+    #   jsonschema
+    #   referencing
 rsa==4.9
     # via python-jose
 rustface==0.1.0
     # via -r requirements.in
-sentry-sdk==1.40.6
+sentry-sdk==1.44.1
     # via -r requirements.in
 six==1.16.0
     # via
-    #   click-repl
-    #   django-autocomplete-light
     #   ecdsa
     #   elasticsearch-dsl
     #   html5lib
     #   l18n
     #   promise
     #   python-dateutil
-social-auth-app-django==5.0.0
+social-auth-app-django==5.4.0
     # via -r requirements.in
-social-auth-core==4.3.0
+social-auth-core==4.5.3
     # via social-auth-app-django
-soupsieve==2.3.2.post1
+soupsieve==2.5
     # via beautifulsoup4
-sqlparse==0.4.3
+sqlparse==0.4.4
     # via django
-tablib[html,ods,xls,xlsx,yaml]==3.2.1
+tablib[html,ods,xls,xlsx,yaml]==3.5.0
     # via
     #   django-import-export
     #   tablib
 telepath==0.3.1
     # via wagtail
-tenacity==8.1.0
+tenacity==8.2.3
     # via plotly
 text-unidecode==1.3
     # via graphene-django
 tinycss2==1.2.1
     # via -r requirements.in
-typing-extensions==4.7.1
+typing-extensions==4.11.0
     # via
     #   django-countries
     #   jwcrypto
     #   pytest-factoryboy
     #   wagtail-localize
-tzdata==2022.7
-    # via -r requirements.in
-unidecode==1.3.4
+tzdata==2024.1
+    # via
+    #   -r requirements.in
+    #   celery
+unidecode==1.3.8
     # via -r requirements.in
 uritemplate==4.1.1
     # via
     #   -r requirements.in
     #   coreapi
     #   drf-spectacular
-urllib3==1.26.15
+urllib3==1.26.18
     # via
     #   django-anymail
     #   elasticsearch
     #   requests
     #   sentry-sdk
-vine==5.0.0
+vine==5.1.0
     # via
     #   amqp
     #   celery
     #   kombu
-wagtail==6.0.1
+wagtail==6.0.2
     # via
     #   -r requirements.in
     #   wagtail-autocomplete
@@ -424,39 +433,37 @@ wagtail==6.0.1
     #   wagtail-modeladmin
     #   wagtail-orderable
     #   wagtailgeowidget
-wagtail-autocomplete==0.9.0
+wagtail-autocomplete==0.11.0
     # via -r requirements.in
 wagtail-generic-chooser==0.6.1
     # via -r requirements.in
 wagtail-grapple==0.24.0
     # via -r requirements.in
-wagtail-headless-preview==0.4.0
+wagtail-headless-preview==0.8.0
     # via wagtail-grapple
-wagtail-localize==1.8.2
+wagtail-localize==1.9
     # via -r requirements.in
 wagtail-modeladmin==2.0.0
     # via -r requirements.in
-wagtail-orderable==1.1.0
+wagtail-orderable==1.2.0
     # via -r requirements.in
-wagtailgeowidget==7.0.0
+wagtailgeowidget==8.1.1
     # via -r requirements.in
-wcwidth==0.2.5
+wcwidth==0.2.13
     # via prompt-toolkit
 webencodings==0.5.1
     # via
     #   html5lib
     #   tinycss2
-willow[heif]==1.6.2
+willow[heif]==1.8.0
     # via
     #   wagtail
     #   willow
-wrapt==1.14.1
-    # via deprecated
 xlrd==2.0.1
     # via tablib
-xlsx2csv==0.8.1
+xlsx2csv==0.8.2
     # via polars
-xlsxwriter==3.0.8
+xlsxwriter==3.2.0
     # via -r requirements.in
 xlwt==1.3.0
     # via tablib
