Change uWSGI and Docker settings to make deployments more robust

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,7 +52,7 @@ x-django-build: &django-build
     - STATIC_ROOT
 
 x-common-runtime: &common-runtime
-  restart: 'no'
+  restart: 'unless-stopped'
 
 services:
   db:
