Add html2text requirement
Needed to print more legible text output from rich text
content to excel sheets, retaining lists so they are
legible

--- a/requirements.txt
+++ b/requirements.txt
@@ -210,6 +210,8 @@ graphql-relay==3.2.0
     #   -r requirements.in
     #   graphene
     #   graphene-django
+html2text==2024.2.26
+    # via -r requirements.in
 html5lib==1.1
     # via wagtail
 humanize==4.4.0
