--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 x-django-environment: &django-environment
   - ENV_FILE
   # Ensure username and pw match with POSTGRES_* defined below
@@ -57,10 +56,10 @@ x-common-runtime: &common-runtime
 services:
   db:
     # Set DB_IMAGE to specify the image name and tag for docker-compose push
-    image: ${DB_IMAGE-kausal-watch-postgres}
-    build:
-      context: .
-      dockerfile: ./docker/db/Dockerfile
+    image: postgis/postgis:16-3.4-alpine
+    #build:
+    #  context: .
+    #  dockerfile: ./docker/db/Dockerfile
     <<: *common-runtime
     environment:
       # Ensure these match with DATABASE_URL defined above
@@ -70,7 +69,7 @@ services:
       - db_data:/var/lib/postgresql/data/
 
   redis:
-    image: ${REDIS_IMAGE-redis:6.0-alpine}
+    image: ${REDIS_IMAGE-redis:7-alpine}
     <<: *common-runtime
 
   app:
@@ -93,6 +92,7 @@ services:
     depends_on:
       - db
       - redis
+      - app
     command: celery worker
 
   celery-beat:
@@ -102,6 +102,7 @@ services:
     depends_on:
       - db
       - redis
+      - app
     command: celery beat
 
   celery-exporter:
