--- a/requirements.in
+++ b/requirements.in
@@ -11,7 +11,6 @@ django-helusers
 lxml
 django-cors-headers
 python-jose
-plotly
 cryptography
 django-image-cropping
 easy-thumbnails
@@ -55,7 +54,7 @@ rich
 elasticsearch_dsl<8.0.0
 pygments-graphql
 drf-nested-routers
-celery
+celery>=5.4.0
 drf-spectacular
 wagtailgeowidget
 django-countries
@@ -68,7 +67,10 @@ Babel
 polars[xlsx2csv]
 wagtail-modeladmin
 loguru
-django-oauth-toolkit==2.3.0
-pycryptodome==3.19.0
+django-oauth-toolkit>=2.3.0
+pycryptodome>=3.19.0
 networkx
 html2text
+PyGithub
+dnspython
+requests>=2.31
