--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -56,8 +56,6 @@ env:
   IMAGE_NAME: ${{ inputs.docker_image_name }}
   IMAGE_FULL_PATH: ${{ inputs.docker_registry }}/${{ inputs.docker_image_name }}
   GIT_REPO_URL: ${{ github.server_url }}/${{ github.repository }}
-  BUILD_ID: '' # set through a step
-  BUILD_TIMESTAMP: '' # set through a step
 
 jobs:
   build:
@@ -87,8 +85,10 @@ jobs:
 
       - name: Determine build env variables
         run: |
-          echo "build_id=$(date +%Y%m%d)_$(echo $GITHUB_SHA | cut -c -8)_${GITHUB_RUN_NUMBER}" >> $GITHUB_OUTPUT
-          echo "git_image_tag=git-$(echo ${{ github.sha }} | cut -c -8)" >> $GITHUB_OUTPUT
+          github_run=$(printf "%04g" $GITHUB_RUN_NUMBER)
+          git_sha=$(echo ${{ github.sha }} | cut -c -8)
+          echo "build_id=$(date +%Y%m%d)_${github_run}_${git_sha}" >> $GITHUB_OUTPUT
+          echo "git_image_tag=git-${git_sha}" >> $GITHUB_OUTPUT
         id: build_meta
 
       - name: Determine Docker tags and labels
