--- a/.github/workflows/build-services.yaml
+++ b/.github/workflows/build-services.yaml
@@ -1,27 +1,27 @@
 name: Build other services
 
 on:
-  workflow_call:
+  workflow_dispatch:
     inputs:
-      docker_registry:
-        required: false
+      image_registry:  # registry.company.com
+        required: true
+        description: "Target image registry"
         type: string
-        default: ${{ vars.DOCKER_REGISTRY }}
       image_repo:  # watch-backend/elasticsearch
         required: true
+        description: "Target image repo"
         type: string
       image_tag:   # 8
         required: true
+        description: "Target image tag"
         type: string
-      dockerfile:   # docker/elasticsearch/Dockerfile
+      context_dir:   # docker/elasticsearch
         required: true
-        type: string
-      context:  # docker/elasticsearch
-        required: true
+        description: "Path to context inside the repo"
         type: string
 
 jobs:
-  elasticsearch:
+  build_service:
     name: Build ${{ inputs.image_repo }}
     runs-on: self-hosted
     container:
@@ -34,7 +34,7 @@ jobs:
       - name: Log into Docker registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ inputs.docker_registry }}
+          registry: ${{ inputs.image_registry }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
@@ -50,8 +50,8 @@ jobs:
         uses: docker/build-push-action@v5
         id: build_push
         with:
-          context: .
-          file: ${{ inputs.dockerfile }}
+          context: ${{ inputs.context_dir }}
+          file: ${{ inputs.context_dir }}/Dockerfile
           push: true
           tags: |
             ${{ inputs.image_tag }}
