--- a/.github/workflows/build-services.yaml
+++ b/.github/workflows/build-services.yaml
@@ -7,18 +7,22 @@ on:
         required: true
         description: "Target image registry"
         type: string
+        default: harbor.kausal.dev
       image_repo:  # watch-backend/elasticsearch
         required: true
         description: "Target image repo"
         type: string
+        default: watch-backend/elasticsearch
       image_tag:   # 8
         required: true
         description: "Target image tag"
         type: string
+        default: '8'
       context_dir:   # docker/elasticsearch
         required: true
         description: "Path to context inside the repo"
         type: string
+        default: 'docker/elasticsearch'
 
 jobs:
   build_service:
@@ -38,6 +42,10 @@ jobs:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      - name: Who am I?
+        run:
+          docker 
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         with:
@@ -54,6 +62,6 @@ jobs:
           file: ${{ inputs.context_dir }}/Dockerfile
           push: true
           tags: |
-            ${{ inputs.image_tag }}
+            ${{ inputs.image_registry }}/${{ inputs.image_repo }}:${{ inputs.image_tag }}
         env:
           BUILDX_GIT_LABELS: full
