--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,7 +22,7 @@ jobs:
     runs-on: self-hosted
     services:
       postgres:
-        image: postgres:16-alpine
+        image: postgis/postgis:16-3.4-alpine
         env:
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
@@ -37,6 +37,7 @@ jobs:
       - name: Run tests
         run: python run_tests.py
         continue-on-error: true
+        working-directory: /code
 
       - name: Sleep
         run: sleep 600
