--- a/docker/elasticsearch/Dockerfile
+++ b/docker/elasticsearch/Dockerfile
@@ -1,3 +1,3 @@
-FROM docker.elastic.co/elasticsearch/elasticsearch:8.11.1
-RUN /usr/share/elasticsearch/bin/elasticsearch-plugin install \
+FROM bitnami/elasticsearch:8.11.1
+RUN elasticsearch-plugin install \
     https://github.com/EvidentSolutions/elasticsearch-analysis-raudikko/releases/download/v0.1.2/elasticsearch-analysis-raudikko-0.1.2-es8.11.1.zip
