--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,7 @@ env:
   POSTGRES_PASSWORD: abcd
   POSTGRES_USER: app
   POSTGRES_DATABASE: app
+  ELASTICSEARCH_PASSWORD: abcde
 
 jobs:
   test:
@@ -27,13 +28,24 @@ jobs:
           POSTGRES_PASSWORD: ${{ env.POSTGRES_PASSWORD }}
           POSTGRES_USER: ${{ env.POSTGRES_USER }}
           POSTGRES_DATABASE: ${{ env.POSTGRES_DATABASE }}
+      elasticsearch:
+        image: harbor.kausal.dev/kausal-watch-backend/elasticsearch:8
+        env:
+          ELASTICSEARCH_PASSWORD: ${{ env.ELASTICSEARCH_PASSWORD }}
 
     container:
       image: ${{ inputs.docker_image_repo }}:${{ inputs.docker_image_tag }}
       env:
         DATABASE_URL: postgresql://${{env.POSTGRES_USER}}:${{env.POSTGRES_PASSWORD}}@localhost:5432/${{env.POSTGRES_DATABASE}}
+        ELASTICSEARCH_URL: http://elastic:${{ env.ELASTICSEARCH_PASSWORD }}@localhost:9200
 
     steps:
+      - name: Wait for DB
+        run: /wait-for-it.sh localhost:5432 -t 30
+
+      - name: Wait for ES
+        run: /wait-for-it.sh localhost:9200 -t 30
+
       - name: Run tests
         run: python run_tests.py
         continue-on-error: true
