--- a/docker/elasticsearch/Dockerfile
+++ b/docker/elasticsearch/Dockerfile
@@ -1,3 +1,14 @@
-FROM bitnami/elasticsearch:8.11.1
-RUN elasticsearch-plugin install \
-    https://github.com/EvidentSolutions/elasticsearch-analysis-raudikko/releases/download/v0.1.2/elasticsearch-analysis-raudikko-0.1.2-es8.11.1.zip
+ARG ES_VERSION=8.13.2
+FROM openjdk:23-jdk-slim-bookworm AS builder
+
+RUN apt update && apt install -y git
+RUN git clone https://github.com/EvidentSolutions/elasticsearch-analysis-raudikko /tmp/raudikko
+WORKDIR /tmp/raudikko
+ARG ES_VERSION
+ENV ES_VERSION=${ES_VERSION}
+RUN ./gradlew build -DelasticsearchVersion=$ES_VERSION
+
+FROM bitnami/elasticsearch:${ES_VERSION}
+RUN mkdir /tmp/plugin
+COPY --from=builder /tmp/raudikko/build/distributions/elasticsearch*.zip /tmp/plugin
+RUN for plugin in /tmp/plugin/*.zip ; do elasticsearch-plugin install file://$plugin ; done
