CI: Use ubuntu-24.04 runner image

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -67,7 +67,8 @@ jobs:
       attestations: write
       contents: read
     container:
-      image: ghcr.io/actions/actions-runner:latest
+      # image: ghcr.io/actions/actions-runner:latest
+      image: ubuntu:24.04
 
     concurrency:
       group: ${{ inputs.docker_registry }}/${{ inputs.docker_image_name }}
