--- a/docker/elasticsearch/Dockerfile
+++ b/docker/elasticsearch/Dockerfile
@@ -12,3 +12,4 @@ FROM bitnami/elasticsearch:${ES_VERSION}
 RUN mkdir /tmp/plugin
 COPY --from=builder /tmp/raudikko/build/distributions/elasticsearch*.zip /tmp/plugin
 RUN for plugin in /tmp/plugin/*.zip ; do elasticsearch-plugin install file://$plugin ; done
+RUN mv /opt/bitnami/elasticsearch/plugins/* /opt/bitnami/elasticsearch/plugins.default/
