CI: fix ES..........

--- a/docker/elasticsearch/Dockerfile
+++ b/docker/elasticsearch/Dockerfile
@@ -9,6 +9,7 @@ ENV ES_VERSION=${ES_VERSION}
 RUN ./gradlew build -DelasticsearchVersion=$ES_VERSION
 
 FROM bitnami/elasticsearch:${ES_VERSION}
-#RUN mkdir /tmp/plugin
-COPY --from=builder /tmp/raudikko/build/distributions/elasticsearch*.zip /opt/bitnami/elasticsearch/plugins.default/
-#RUN for plugin in /tmp/plugin/*.zip ; do elasticsearch-plugin install file://$plugin ; done
+RUN mkdir /tmp/plugin
+COPY --from=builder /tmp/raudikko/build/distributions/elasticsearch*.zip /tmp/plugin
+RUN for plugin in /tmp/plugin/*.zip ; do elasticsearch-plugin install file://$plugin ; done
+RUN mv /opt/bitnami/elasticsearch/plugins/* /opt/bitnami/elasticsearch/plugins.default/
