Improve uWSGI request logging

--- a/docker/app/uwsgi.ini
+++ b/docker/app/uwsgi.ini
@@ -12,7 +12,8 @@ static-map = /media=/srv/media
 master = true
 no-orphans = true
 harakiri = 60
-logformat = time=%(isotime) level=INFO method=%(method) path=%(uri) host=%(host) http_status=%(status) remote_ip=%(addr) response_time_ms=%(msecs) response_size=%(size) request_body_size=%(cl) user_agent="%(uagent)"
+logformat = time=%(isotime) level=%(level) method=%(method) path=%(uri) host=%(host) http_status=%(status) remote_ip=%(addr) response_time_ms=%(msecs) response_size=%(size) request_body_size=%(cl) user_agent="%(uagent)"
 #log-date = time=%%Y-%%m-%%dT%%H:%%M:%%S msg=
 log-x-forwarded-for = true
 import = aplans.uwsgi_support
+req-logger = python:uwsgi-req
