CI: Start adding deployment stuff

--- a/docker/app/Dockerfile
+++ b/docker/app/Dockerfile
@@ -78,6 +78,7 @@ FROM base AS final
 
 ARG BUILD_ID
 ENV BUILD_ID ${BUILD_ID}
+ARG SENTRY_RELEASE ${SENTRY_RELEASE}
 
 ENV VENV_PATH=/venv
 ENV PATH=${VENV_PATH}/bin:${PATH}
