--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -13,3 +13,14 @@ jobs:
     with:
       docker_image_repo: ${{ needs.build.outputs.image }}
       docker_image_tag: ${{ needs.build.outputs.image_tag }}
+
+  deploy:
+    needs: [build]
+    uses: ./.github/workflows/deploy.yaml
+    secrets: inherit
+    if: needs.build.outputs.deployment_env
+    with:
+      docker_image_repo: ${{ needs.build.outputs.image }}
+      docker_image_tag: ${{ needs.build.outputs.image_tag }}
+      project_name: watch-backend
+      deployment_env: ${{ needs.build.outputs.deployment_env }}
