--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -23,11 +23,11 @@ on:
         required: false
         type: string
 
-    # secrets:
-    #   AWS_ACCESS_KEY_ID:
-    #     required: false
-    #   AWS_SECRET_ACCESS_KEY:
-    #     required: false
+    secrets:
+      AWS_ACCESS_KEY_ID:
+        required: false
+      AWS_SECRET_ACCESS_KEY:
+        required: false
 
 env:
   POSTGRES_PASSWORD: abcd
@@ -74,3 +74,9 @@ jobs:
           PGPORT: 5432
           PGPASSWORD: ${{ env.POSTGRES_PASSWORD }}
           PGUSER: ${{ env.POSTGRES_USER }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
+      - name: Sleep
+        run: sleep 300s
+        if: always()
