Implement local media storage with S3 fallback
This is meant for all environments that are not production deployments.

--- a/requirements.in
+++ b/requirements.in
@@ -60,7 +60,7 @@ drf-spectacular
 wagtailgeowidget
 django-countries
 tzdata
-django-storages
+django-storages[s3]
 django-autoslug
 unidecode  # for decoding non-ASCII characters nicely in slugs, used optionally by django-autoslug
 xlsxwriter
