--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,12 @@ beautifulsoup4==4.12.3
     # via wagtail
 billiard==4.2.0
     # via celery
+boto3==1.34.120
+    # via django-storages
+botocore==1.34.120
+    # via
+    #   boto3
+    #   s3transfer
 cachetools==5.3.3
     # via django-helusers
 celery==5.3.6
@@ -61,9 +67,7 @@ coreapi==2.3.3
 coreschema==0.0.4
     # via coreapi
 coverage[toml]==7.4.4
-    # via
-    #   coverage
-    #   pytest-cov
+    # via pytest-cov
 cryptography==42.0.5
     # via
     #   -r requirements.in
@@ -157,7 +161,7 @@ django-redis==5.4.0
     # via -r requirements.in
 django-reversion==5.0.12
     # via -r requirements.in
-django-storages==1.14.2
+django-storages[s3]==1.14.2
     # via -r requirements.in
 django-taggit==5.0.1
     # via wagtail
@@ -234,6 +238,10 @@ jinja2==3.1.3
     # via
     #   -r requirements.in
     #   coreschema
+jmespath==1.0.1
+    # via
+    #   boto3
+    #   botocore
 jsonschema==4.21.1
     # via drf-spectacular
 jsonschema-specifications==2023.12.1
@@ -335,6 +343,7 @@ pytest-factoryboy==2.7.0
     # via -r requirements.in
 python-dateutil==2.9.0.post0
     # via
+    #   botocore
     #   celery
     #   elasticsearch-dsl
     #   faker
@@ -381,6 +390,8 @@ rsa==4.9
     # via python-jose
 rustface==0.1.0
     # via -r requirements.in
+s3transfer==0.10.1
+    # via boto3
 sentry-sdk==1.44.1
     # via -r requirements.in
 six==1.16.0
@@ -400,9 +411,7 @@ soupsieve==2.5
 sqlparse==0.4.4
     # via django
 tablib[html,ods,xls,xlsx,yaml]==3.5.0
-    # via
-    #   django-import-export
-    #   tablib
+    # via django-import-export
 telepath==0.3.1
     # via wagtail
 tenacity==8.2.3
@@ -430,6 +439,7 @@ uritemplate==4.1.1
     #   drf-spectacular
 urllib3==1.26.18
     # via
+    #   botocore
     #   django-anymail
     #   elasticsearch
     #   requests
@@ -472,9 +482,7 @@ webencodings==0.5.1
     #   html5lib
     #   tinycss2
 willow[heif]==1.8.0
-    # via
-    #   wagtail
-    #   willow
+    # via wagtail
 wrapt==1.16.0
     # via deprecated
 xlrd==2.0.1
