CI: Fix Reviewdog invocation; also run mypy

--- a/.reviewdog.yml
+++ b/.reviewdog.yml
@@ -1,7 +1,7 @@
 runner:
   ruff:
-    cmd: ruff check . --output-format text
-    format: flake8
+    cmd: ruff check . --output-format sarif
+    format: sarif
   mypy:
     cmd: mypy .
     format: mypy
