--- a/.github/workflows/reviewdog.yml
+++ b/.github/workflows/reviewdog.yml
@@ -6,13 +6,13 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
         contents: read
-        pull-requests: write 
+        pull-requests: write
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python 3.11
+      - name: Set up Python 3.12
         uses: actions/setup-python@v4
         with:
-          python-version: "3.11"
+          python-version: "3.12"
           cache: 'pip'
       - uses: reviewdog/action-setup@v1
         with:
@@ -23,5 +23,4 @@ jobs:
         env:
           REVIEWDOG_GITHUB_API_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          reviewdog -reporter=github-pr-review -runners ruff
-
+          reviewdog -reporter=github-pr-review -fail-on-error
